added title to navbar

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -43,3 +43,9 @@ h2 {
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+#nav_title {
+  position: absolute;
+  padding-left: 55px;
+  padding-top: 13px;
+}
