--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "http://pngimg.com/uploads/football/football_PNG52729.png" %>
     <% end %>
-
+    <h2 id="nav_title">Football bay</h2>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
