Fixed the price

--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -7,7 +7,7 @@
       <%= v.input :address_line_1 %>
       <%= v.input :address_line_2 %>
       <%= v.input :city %>
-      <%= v.input :cost_per_hour %>
+      <%= v.input :price_cents %>
       <%= v.input :post_code %>
       <%= v.input :surface, collection: ["Grass", "Hybrid", "Synthetic", "2G artificial grass", "3G artificial grass"] %>
       <%= v.input :floodlit %>
