--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,6 +50,7 @@ h1.home {
   position: relative;
   text-align: center;
   height: 70px;
+  margin-top: 40px;
 }
 #instruction {
   // margin: 200px;
@@ -90,4 +91,13 @@ h1.home {
 .background-shadow {
   background-color: rgba($color: #000000, $alpha: 0.2);
 }
-
+.steps {
+  display: grid;
+  flex-wrap: wrap;
+  align-content: center;
+  grid-template-columns: 50px 50px 50px 50px;
+}
+.svg {
+  margin-top: -80px;
+  margin-bottom: -100px;
+}
