changed the styling of the dashboard

--- a/app/assets/stylesheets/components/_newcard.scss
+++ b/app/assets/stylesheets/components/_newcard.scss
@@ -36,3 +36,11 @@
   width: 600px;
   margin: 16px;
 }
+
+.newcard.dashboard {
+  text-shadow: none;
+  display: inline-flex;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  
+}
