--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,70 +1,64 @@
 <div class="container justify-content-center">
+
   <h1 class="text-center"> Your Dashboard</h1>
+
   <div class="container">
-    <h1>Upcoming bookings</h1>
+    <h2>Upcoming bookings</h2>
+
     <% upcoming_bookings =  current_user.booked_matches.select{ |booking| booking.start_time > DateTime.now }  %>
     <!-- performance wise it's better to have the logic below implemented in the controller, but becuase we don't have a lot of records it's fine to do this in the view-->
     <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
     <% upcoming_bookings.each do |booking| %>
-      <div class="newcard mb-3">
-        <p class="text-center">
-          <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?"} do %>
-          <i class="fas fa-trash-alt" style="font-size: 1.5em"></i>
-          <% end %>
-          <span class="text-danger"><%= booking.title %></span>
-          <%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> -
-          <%= booking.end_time.strftime("%l:%M%p") %> at
-          <%= booking.venue.post_code %>,
-          <%= booking.no_of_players %> a side game by <%= booking.user.email %>
-          <%= booking.description %>
-        </p>
-      </div>
-    <% end %>
-  </div>
 
-  <div class="container">
-    <h1>Current Bookings</h1>
-    <% current_bookings =  current_user.booked_matches.select{ |booking| booking.start_time > DateTime.now && booking.end_time < DateTime.now }  %>
-    <!-- performance wise it's better to have the logic below implemented in the controller, but because we don't have a lot of records it's fine to do this in the view-->
-    <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
-    <% current_bookings.each do |booking| %>
-      <div class="newcard mb-3">
-        <p class="text-center">
-          <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?"} do %>
-          <i class="fas fa-trash-alt" style="font-size: 1.5em"></i>
-          <% end %>
-          <span class="text-danger"><%= booking.title.nil? ? "No title": booking.match.title %></span>
-          <%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> -
-          <%= booking.end_time.strftime("%l:%M%p") %> at
-          <%= booking.venue.post_code %>,
-          <%= booking.no_of_players %> a side game by <%= booking.user.email %>
-          <%= booking.description %>
-        </p>
+      <div class="newcard dashboard">
+          
+        <div>
+          <img src="<%= cl_image_path booking.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+        </div>
+
+        <div style="margin-left:100px; margin-right:100px;">
+          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.title %></h3>
+          
+          <p><%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.end_time.strftime("%l:%M%p") %></p>
+          <p><%= booking.venue.post_code %></p>
+          <p><%= booking.no_of_players %> a side game by <%= booking.user.email %></p>
+        
+          <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
+         
+        </div>
+       
       </div>
     <% end %>
   </div>
   
   <div class="container">
-    <h1>Previous Bookings</h1>
+    <h2>Previous Bookings</h2>
+
     <% past_bookings =  current_user.booked_matches.select{ |booking| booking.start_time < DateTime.now }  %>
     <!-- performance wise it's better to have the logic below implemented in the controller, but because we don't have a lot of records it's fine to do this in the view-->
     <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
     <% past_bookings.each do |booking| %>
-      <div class="newcard mb-3">
-        <p class="text-center">
-          <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?"} do %>
-          <i class="fas fa-trash-alt" style="font-size: 1.5em"></i>
-          <% end %>
-          <span class="text-danger"><%= booking.title %></span>
-          <%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> -
-          <%= booking.end_time.strftime("%l:%M%p") %> at
-          <%= booking.venue.post_code %>,
-          <%= booking.no_of_players %> a side game by <%= booking.user.email %>
-          <%= booking.description %>
-        </p>
+      <div class="newcard dashboard">
+          
+        <div>
+          <img src="<%= cl_image_path booking.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+        </div>
+
+        <div style="margin-left:100px; margin-right:100px;">
+          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.title %></h3>
+          
+          <p><%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.end_time.strftime("%l:%M%p") %></p>
+          <p><%= booking.venue.post_code %></p>
+          <p><%= booking.no_of_players %> a side game by <%= booking.user.email %></p>
+        
+          <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
+         
+        </div>
+       
       </div>
     <% end %>
   </div>
+
 </div>
 
 
