--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,11 +51,11 @@
 }
 .cards_home1 {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  gap: 32px;
+  grid-template-columns: auto auto auto;
+  gap: 64px;
   justify-content: center;
-  margin-top: 50px;
-  margin-bottom: 100px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .cardss {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
