--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,23 +5,20 @@
   <div class="container">
     <h2>Upcoming bookings</h2>
 
-    <% upcoming_bookings =  current_user.booked_matches.select{ |booking| booking.start_time > DateTime.now }  %>
-    <!-- performance wise it's better to have the logic below implemented in the controller, but becuase we don't have a lot of records it's fine to do this in the view-->
-    <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
-    <% upcoming_bookings.each do |booking| %>
-
+    <% @booked_matches.each do |booking| %>
+    
       <div class="newcard dashboard">
           
         <div>
-          <img src="<%= cl_image_path booking.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
         </div>
 
-        <div style="margin-left:100px; margin-right:100px;">
-          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.title %></h3>
+        <div style="margin-left:100px; margin-right:100px; width: 460px;">
+          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.match.title %></h3>
           
-          <p><%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.end_time.strftime("%l:%M%p") %></p>
-          <p><%= booking.venue.post_code %></p>
-          <p><%= booking.no_of_players %> a side game by <%= booking.user.email %></p>
+          <p><%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.match.end_time.strftime("%l:%M%p") %></p>
+          <p><%= booking.match.venue.post_code %></p>
+          <p><%= booking.match.no_of_players %> a side game by <%= booking.match.user.email %></p>
         
           <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
          
@@ -44,12 +41,12 @@
           <img src="<%= cl_image_path booking.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
         </div>
 
-        <div style="margin-left:100px; margin-right:100px;">
-          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.title %></h3>
+        <div style="margin-left:100px; margin-right:100px; width: 460px;">
+          <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.match.title %></h3>
           
-          <p><%= booking.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.end_time.strftime("%l:%M%p") %></p>
-          <p><%= booking.venue.post_code %></p>
-          <p><%= booking.no_of_players %> a side game by <%= booking.user.email %></p>
+          <p><%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.match.end_time.strftime("%l:%M%p") %></p>
+          <p><%= booking.match.venue.post_code %></p>
+          <p><%= booking.match.no_of_players %> a side game by <%= booking.match.user.email %></p>
         
           <%= link_to "Delete", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
          
