--- a/app/assets/stylesheets/components/_newcard.scss
+++ b/app/assets/stylesheets/components/_newcard.scss
@@ -7,6 +7,7 @@
   justify-content: space-around;
   font-size: 22px;
   text-shadow: 0 0 10px rgba(0,0,0,0.7);
+  height: 100%;
 }
 .newcard a {
   color: white;
