--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,11 +11,10 @@
           <% else %>
             <div class="newcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://static-cse.canva.com/blob/135830/under-construction-signage-on-laptop-keyboard-211122.jpg')">
           <% end %>
-            <p><%= venue.name %></p>
-            <p>Amount: <%= humanized_money_with_symbol(venue.price) %></p>
-          <div class="">
-            <%= link_to venue.name, venue_path(venue) %>
-            <p style="color: white;">Cost per person : <%= humanized_money_with_symbol(venue.price) %></p>
+          <div class="d-flex flex-column">
+            <p class="p-2" style="color: white"> <%= venue.name %></p>
+            <p class="p-2" style="color: white;">Cost per person : <%= humanized_money_with_symbol(venue.price) %></p>
+          </div>
           </div>
         <% end %>
       <% end %>
