--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,8 @@
         <%= submit_tag "Search For The Game", class: "btn button button-match btn-lg list-inline", style: "width: -webkit-fill-available;" %>
       <% end %>
       <p>
-        <a href="#instruction" class="btn button button-match btn-lg list-inline">Find out about us</a>
+        <a href="#instruction" class="btn button button-match btn-lg list-inline", style="width: -webkit-fill-available;">Find out about us</a>
+        <%=  %>
       </p>
     </div>
 
