--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,6 +10,10 @@
   font-size: 16px;
   font-weight: 400;
   margin-bottom: 16px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 20px;
+  box-shadow: 3px 3px #00000016;
+
 }
 
 .button:hover {
