--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -24,20 +24,36 @@
     <p>Match Start - <%= @match.start_time.strftime(" %e %a %b  %l:%M %p") %></p>
   </div>
 
-  <h2>Match Details:</h2><p><%= @match.description %></p>
-  <h2>Players needed = <%= @match.spots_left %>/<%= @match.no_of_players%> <br>
-    <% @match.spots_left.times do %>
-      <%= image_tag('athlete.png', style:"height: 30px") %>
-    <% end %>
-    <% @match.spots_taken.times do %>
-      <%= image_tag('athlete-negative.png', style:"height: 30px") %>
-    <% end %>
-  </h2>
-  <h2>Skill level = <%= @match.skill_level %></h2>
+  <div class="d-flex justify-content-around">
+    <div>
+      <h2>Match Details:</h2><p><%= @match.description %></p>
+      <h3>Players needed = <%= @match.spots_left %>/<%= @match.no_of_players%> <br>
+        <% @match.spots_left.times do %>
+          <%= image_tag('athlete.png', style:"height: 30px") %>
+        <% end %>
+        <% @match.spots_taken.times do %>
+          <%= image_tag('athlete-negative.png', style:"height: 30px") %>
+        <% end %>
+      </h3>
+      <h3>Skill level = <%= @match.skill_level %></h3>
 
-  <button id="show" class="button">Contact Host</button>
-  <div class="qrcode d-none">
-    <h2>Scan the QR to Contact the Host</h2>
-    <%= raw @qr.as_html %>
+      <button id="show" class="button">Contact Host</button>
+      <div class="qrcode d-none">
+        <h2>Scan the QR to Contact the Host</h2>
+        <%= raw @qr.as_html %>
+      </div>
+    </div>
+
+    <div>
+      <h2>Venue Details</h2>
+      <h3><%= @match.venue.name %></h3>
+      <h3>Cost per hour per person <%= @match.venue.cost_per_hour %></h3>
+      <h3>surface <%= @match.venue.surface %></h3>
+      <h3>floodlit <%= @match.venue.floodlit %></h3>
+    </div>
   </div>
 </div>
+
+  
+  
+
