small fix for dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -35,7 +35,7 @@
       <div class="newcard dashboard">
           
         <div>
-          <img src="<%= cl_image_path booking.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
         </div>
 
         <div style="margin-left:100px; margin-right:100px; width: 460px;">
