--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,10 +15,13 @@ td {
   width: 0px;
   height: 10px;
 }
-
+.qrcode {
+  margin-bottom: 100px;
+}
 td.black { border-color: #000; }
 td.white { border-color: #fff; }
 //
+
 .home_video {
   width: 100vw;
   height: 100vh;
