Got rid of the radius on the right side of the pic

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -10,7 +10,7 @@
       <div class="newcard dashboard">
           
         <div>
-          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
         </div>
 
         <div style="margin-left:48px; margin-right:48px; width: auto;">
@@ -36,7 +36,7 @@
       <div class="newcard dashboard">
           
         <div>
-          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-radius: 8px;">
+          <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
         </div>
 
         <div style="margin-left:48px; margin-right:48px; width: auto;">
