--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,7 +67,7 @@
     </div>  
   
   </section>
-  <h2 style="text-align: center">Recently added games</h2>
+  <h2 style="text-align: center; margin-top: 50px; margin-bottom: 25px; font-size: 50px;">Recently added games</h2>
   <div class="cards_home">
     <% @matches_last.each do |match| %>
     <div class="cardss">
@@ -89,7 +89,7 @@
   </div>
 
 
-  <h2 style="text-align: center">Games starting soon</h2>
+  <h2 style="text-align: center; margin-top: 50px; margin-bottom: 25px;font-size: 50px;">Games starting soon</h2>
   <div class="cards_home">
     <% @matches_first.each do |match| %>
     <div class="cardss">
