--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,8 +12,6 @@
   margin-bottom: 16px;
   font-family: 'Bebas Neue', cursive;
   font-size: 20px;
-  
-
 }
 
 .button:hover {
@@ -34,7 +32,7 @@ a:hover {
 }
 
 .button-match {
-  height: 40px;
+  // height: 40px;
   width: 100%;
 }
 
