--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,12 @@
 <div>
-  <%= link_to 'Add a Venue', new_venue_path, class: "button position-top" %>
-  <h1 class="text-center">Available Football Venues</h1>
+
+
+
+
+  <div class="container title-match text-center">
+    <h1 class="text-center">Available Football Venues</h1>
+    <%= link_to 'Add a Venue', new_venue_path, class: "btn button button-match btn-lg list-inline" %>
+  </div>
 
   <div class="my-container">
     <div class="cards">
