card venue title

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -12,7 +12,7 @@
             <div class="newcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://static-cse.canva.com/blob/135830/under-construction-signage-on-laptop-keyboard-211122.jpg')">
           <% end %>
           <div class="d-flex flex-column justify-content-center align-items-center">
-            <p style="color: white"> <%= venue.name %></p>
+            <h2 class="venuet" style="color: white"> <%= venue.name %></h2>
             <p style="color: white;">Cost per person : <%= humanized_money_with_symbol(venue.price) %></p>
           </div>
           </div>
