--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -73,6 +73,27 @@
   padding-bottom: 10px;
   height: 400px;
  }
+ .review-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  background-color:white;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  width: 900px;
+  padding-bottom: 10px;
+  height: 400px;
+  align-items: center;
+ }
+ .review-card1 {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  background-color:white;
+  border-radius: 4px;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  width: 900px;
+  padding-bottom: 10px;
+  height: 250px;
+  align-items: center;
+ }
 
  .cardss.games {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
