Fixed the window pop-up on the match show map

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -19,7 +19,7 @@
           <% end %>
           <div class="d-flex flex-column justify-content-center align-items-center">
             <p style="color: white"> <%= venue.name %></p>
-            <p style="color: white;">Cost per person : <%= humanized_money_with_symbol(venue.price) %></p>
+            <!-- <p style="color: white;">Cost per person : <%= humanized_money_with_symbol(venue.price) %></p>-->
           </div>
           </div>
         <% end %>
