--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -80,7 +80,7 @@
   margin-bottom: 16px;
   width: 900px;
   padding-bottom: 10px;
-  height: 400px;
+  height: auto;
   align-items: center;
  }
  .review-card1 {
