--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -19,7 +19,7 @@
   </div>
   
   <div class="review-card" style="margin-top: 16px;">
-    <h2>Match Details</h2>
+    <h2>Venue Details</h2>
     <h3>Address:</h3>
     <p><%= @venue.address_line_1 %></p>
     <h3>City:</h3>
