--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -26,7 +26,7 @@
 <div class="container">
   <div class="title-match text-center">
     <h1>Available Matches</h1>
-    <%= link_to 'Create Match', new_match_path, class: "btn button button-match btn-lg list-inline", style: "width: -webkit-fill-available;" %>
+    <%= link_to 'Create Match', new_match_path, class: "btn button button-match btn-lg list-inline", style: "width: 200px" %>
   </div>
   <div class="cards_games">
     <% @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
