Button on index venue downsized

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="container title-match text-center">
     <h1 class="text-center">Available Football Venues</h1>
-    <%= link_to 'Add a Venue', new_venue_path, class: "btn button button-match btn-lg list-inline" %>
+    <%= link_to 'Add a Venue', new_venue_path, class: "btn button button-match btn-lg list-inline", style: "width: 200px" %>
   </div>
 
   <div class="my-container">
