button to booking details

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,29 +6,30 @@
     <h2>Upcoming bookings</h2>
 
     <% @booked_matches.each do |booking| %>
-      <% name_of_user = booking.match.user.email.partition("@").first %> 
+      <% name_of_user = booking.match.user.email.partition("@").first %>
       <div class="newcard dashboard">
-          
+
         <div>
           <img src="<%= cl_image_path booking.match.venue.photo.key, height: 250, width: 300, crop: :fill, gravity: :auto %>" alt="venue picture" style="border-top-left-radius: 8px; border-bottom-left-radius: 8px;">
         </div>
 
         <div style="margin-left:48px; margin-right:48px; width: auto;">
           <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.match.title %></h3>
-          
+
           <p><%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.match.end_time.strftime("%l:%M%p") %></p>
           <p><%= booking.match.venue.post_code %></p>
           <p><strong><%= booking.match.no_of_players/2 %> a side</strong> game by <%= name_of_user %></p>
           <div class="d-flex flex-row">
             <%= link_to "Leave a review", "#{venue_path(booking)}#review-input", class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
+            <%= link_to "Booking details", booking_path(booking), class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
             <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
           </div>
         </div>
-       
+
       </div>
     <% end %>
   </div>
-  
+
   <div class="container">
     <h2>Previous Bookings</h2>
 
@@ -41,16 +42,17 @@
 
         <div style="margin-left:48px; margin-right:48px; width: auto;">
           <h3 style="font-family:'Bebas Neue', cursive;"><%= booking.match.title %></h3>
-          
+
           <p><%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> until <%= booking.match.end_time.strftime("%l:%M%p") %></p>
           <p><%= booking.match.venue.post_code %></p>
           <p><strong><%= booking.match.no_of_players/2 %> a side game</strong> by <%= name_of_user %></p>
           <div class="d-flex flex-row">
             <%= link_to "Leave a review", "#{venue_path(booking)}#review-input", class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
+            <%= link_to "Booking details", booking_path(booking), class: "btn button button-match btn-lg list-inline", style: "margin-right: 16px" %>
             <%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure?"}, class: "button delete" %>
           </div>
         </div>
-       
+
       </div>
     <% end %>
   </div>
