Added hover effect on cards

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,7 +19,7 @@
   background-color: #23af62;
   transition: 0.2s;
   box-shadow: 3px 3px #00000016;
-  color: white;
+  color: white !important;
 }
 
 .button-secondary {
