--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,11 +11,11 @@
   <div class="my-container">
     <div class="cards">
       <% @venues.each do |venue| %>
-        <%= link_to venue_path(venue) do %>
+        <%= link_to venue_path(venue), class: "card-link-grid" do %>
           <% if venue.photo.attached? %>
             <div class="newcard" style="background-image: url('<%= cl_image_path venue.photo.key, height: 300, width: 400, crop: :fill, gravity: :auto %>')">
           <% else %>
-            <div class="newcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://static-cse.canva.com/blob/135830/under-construction-signage-on-laptop-keyboard-211122.jpg')">
+            <div class="newcard" style="background-image: url('https://static-cse.canva.com/blob/135830/under-construction-signage-on-laptop-keyboard-211122.jpg')">
           <% end %>
           <div class="d-flex flex-column justify-content-center align-items-center">
 
