--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -52,3 +52,20 @@ body {
 .venuet {
   font-size: 48px;
 }
+
+
+.match-confirmation {
+  font-weight: lighter;
+  color: black;
+  background-color: #2CFF8B;
+  position: absolute;
+  top: 155px;
+  right: 30px;
+  font-size: 23px;
+}
+
+.price_booking_show {
+  position: absolute;
+  top: 297px;
+  right: 30px;
+}
