review form changes

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -78,10 +78,11 @@
   background-color:white;
   border-radius: 4px;
   margin-bottom: 16px;
-  width: 900px;
+  width: 930px;
   padding-bottom: 10px;
   height: auto;
   align-items: center;
+  padding: 20px 50px;
  }
  .review-card1 {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -89,7 +90,7 @@
   border-radius: 4px;
   margin-top: 20px;
   margin-bottom: 16px;
-  width: 900px;
+  width: 930px;
   padding-bottom: 10px;
   height: 250px;
   align-items: center;
