--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -113,7 +113,8 @@ a:hover {
   padding: 0 20px;
   min-width: 160px;
   height: 52px;
-  font-size: 16px;
+  font-weight: bold;
+  font-size: 24px;
   line-height: 1.2;
   background-color: #2BFF8B;
   margin-top: 20px;
